# paywall

./: Dockerfile  README.md  comments.json  docker-compose.yaml  publications.json  pyproject.toml  users.json
base/templates/base/: base.html
base/templates/base/includes/: inc_menu.html  inc_registrations_and_title.html
codes/: __init__.py  admin.py  form.py  models.py  tests.py  urls.py  views.py
codes/migrations/: 0001_initial.py
codes/templates/codes/: auth.html  main.html  verify.html
comments/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
comments/migrations/: 0001_initial.py
comments/templates/comments/: comment_confirm_delete.html  comment_form.html  comments.html
config/: settings.py  urls.py
publications/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
publications/migrations/: 0001_initial.py  0002_alter_publication_is_paid.py
publications/templates/publications/: publication_confirm_delete.html  publication_detail.html  publication_form.html  publication_list.html
static/css/: custom_stile.css
users/: admin.py  form.py  models.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_paidsubscription.py
users/templates/users/: login.html  paidsubscription_form.html  user_form.html
